# CppCMakeVcpkgTemplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets-vs-template.json  CMakePresets-vscode-template.json  CMakePresets.json  README.md  build-aarch64-linux.sh  build-opencv.sh  run.sh  toolchain-aarch64.cmake  vcpkg.json
include/: boost_serial_test.h  event_test.h  example.h  signals2_test.h  vtk_test.h
src/: main.cpp
subbinary/: CMakeLists.txt  subbin.cpp
sublibrary/: CMakeLists.txt
sublibrary/include/: sublib1.h
sublibrary/src/: sublib1.cpp
